<resources>
    <string name="app_name">Florest Simulator</string>
    <string name="titulo">FLOREST SIMULATOR</string>
    <string name="acessar_sistema">Acessar Sistema</string>
    <string name="titulo_min">Florest Simulator</string>
    <string name="novo_projeto_censo">Novo projeto censo</string>
    <string name="nome_projeto">Nome projeto:</string>
    <string name="area_inventariada">Área inventariada:</string>
    <string name="collects_trees">Florest Simulator</string>
    <string name="criar_projeto">Criar projeto</string>
    <string name="novo_projeto_amostra">Novo projeto por amostras</string>
    <string name="meu_painel">Meu painel</string>
    <string name="painel_projeto_censo">Novo projeto censo</string>
    <string name="painel_projeto_amostras">Novo projeto por amostras</string>
    <string name="painel_todos_projetos_censos">Todos os projetos censo</string>
    <string name="painel_todos_projetos_amostras">Todos os projetos amostras</string>
    <string name="indice_confiabilidade">Indice de confiabilidade</string>
    <string name="todos_projetos">Todos os projetos</string>
    <string name="nova_amostra">Nova amostra</string>
    <string name="nome_amostra">Nome amostra</string>
    <string name="tamanho_amostra">Tamanho da amostra</string>
    <string name="criar_amostra">Criar amostra</string>
    <string name="pesquise">Pesquisar pelo nome comum:</string>
    <string name="nome_comum">Nome comum:</string>
    <string name="fator_forma">Fator forma:</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="cadastrar_arvore">cadastrar</string>
    <string name="cap">Cap:</string>
    <string name="dap">Dap:</string>
    <string name="cad_arvore">Cadastrar árvore</string>
    <string name="nomeProjeto">Projeto:</string>
    <string name="areaInventariada">Área inventariada:</string>
    <string name="status">Status:</string>
    <string name="indice_confianca">Indice confiânça:</string>
    <string name="btn_continuar">Continuar</string>
    <string name="btn_visualizar">Visualizar</string>
    <string name="title_activity_activity_todas_amostras">activity_todas_amostras</string>
    <string name="txt_todas_amostras">Todas as amostras</string>
    <string name="txt_continuar_censo">Continuar projeto censo</string>
    <string name="btn_define_arvore">Define árvore</string>
    <string name="txt_cadastradas">Quant. cadastradas:</string>
    <string name="txt_divisor">Definir árvore</string>
    <string name="txt_info">Definições</string>
    <string name="tv_cap">Cap:</string>
    <string name="tv_altura">Altura:</string>
    <string name="txt_arv_coletada">Árvores coletadas:</string>
    <string name="btn_ver_coleta">Ver coleta</string>
    <string name="field_empty">O campo está vazio.</string>
    <string name="tv_text_login">Identificação</string>
    <string name="tv_login">Login</string>
    <string name="tv_senha">Senha:</string>
    <string name="btn_conect">Conectar</string>
    <string name="btn_nova_amostra">Nova amostra</string>
</resources>
