<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_marginBottom="20dp"
            android:weightSum="1"
            style="@style/fundo">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/logo_p"
                android:contentDescription="@string/collects_trees" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/titulo_min"
                android:id="@+id/txt_titulo"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:textColor="#FFFFFF"
                android:layout_weight="0.84" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/nova_amostra"
            android:id="@+id/textView"
            android:textColor="#186110"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="30dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/nome_amostra"
            android:id="@+id/tvt_nome_projeto"
            android:textColor="#186110"
            android:layout_marginLeft="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_nome_amostra"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tamanho_amostra"
            android:id="@+id/tvt_area_inventariada"
            android:textColor="#186110"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/tv_tamanho_amostra"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/criar_amostra"
            android:id="@+id/btn_criar_amostra"
            android:background="@drawable/radius_botton_painel"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="#FFFFFF"
            android:onClick="inserirNovaAmostra"/>
    </LinearLayout>

</ScrollView>