<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_marginBottom="20dp"
            android:weightSum="1"
            style="@style/fundo">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/logo_p"
                android:contentDescription="@string/collects_trees" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/titulo_min"
                android:id="@+id/txt_titulo"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:textColor="#FFFFFF"
                android:layout_weight="0.84" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_todas_amostras"
            android:id="@+id/textView"
            android:textColor="#186110"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="20dp"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/nomeProjeto"
            android:id="@+id/textView7"
            android:textColor="#186110"
            android:layout_marginLeft="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="nomeProjeto"
            android:layout_marginLeft="15dp"
            android:id="@+id/txt_nome_projeto" />

    <View
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="0.1dp"
        android:background="@android:color/darker_gray"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:id="@android:id/list"
            />


    </LinearLayout>