<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_marginBottom="20dp"
            android:weightSum="1"
            style="@style/fundo">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/logo_p"
                android:contentDescription="@string/collects_trees" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/titulo_min"
                android:id="@+id/txt_titulo"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:textColor="#FFFFFF"
                android:layout_weight="0.84" />
        </LinearLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="441dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/nomeProjeto"
                android:id="@+id/textView4"
                android:textColor="#186110"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="nomeProjeto"
                android:id="@+id/tv_nome_projeto"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_cadastradas"
                android:id="@+id/textView5"
                android:textColor="#186110"
                android:layout_below="@+id/textView4"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="total"
                android:id="@+id/txt_cadastradas_amostra"
                android:layout_below="@+id/tv_nome_projeto"
                android:layout_alignRight="@+id/tv_nome_projeto"
                android:layout_alignEnd="@+id/tv_nome_projeto" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_divisor"
                android:id="@+id/textView6"
                android:textColor="#186110"
                android:layout_below="@+id/textView5"
                android:layout_marginTop="20dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ac_buscar"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/textView6"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_info"
                android:id="@+id/txt_definicoes"
                android:layout_marginBottom="10dp"
                android:textColor="#186110"
                android:layout_below="@+id/ac_buscar"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tv_cap"
                android:id="@+id/tv_cap"
                android:layout_below="@+id/txt_definicoes"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/txt_cap"
                android:layout_below="@+id/tv_cap"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/ac_buscar"
                android:layout_alignEnd="@+id/ac_buscar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tv_altura"
                android:id="@+id/textView9"
                android:layout_below="@+id/txt_cap"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/txt_altura"
                android:layout_below="@+id/textView9"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cadastrar_arvore"
                android:id="@+id/btn_cad_arvore"
                android:layout_marginTop="10dp"
                android:textColor="#FFFFFF"
                android:background="@drawable/radius_botton_painel"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_below="@+id/txt_altura"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="cadastra_dado_amostra"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_ver_coleta"
                android:id="@+id/btn_ver_coleta"
                android:textColor="#FFFFFF"
                android:background="@drawable/radius_botton_painel"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:onClick="ver_coleta_amostra"
                android:layout_alignBottom="@+id/btn_cad_arvore"
                android:layout_alignRight="@+id/txt_altura"
                android:layout_alignEnd="@+id/txt_altura" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>