<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nome_projeto"
        android:textColor="#186110"
        android:id="@+id/tv_nome_amostra"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="nomeprojeto"
        android:id="@+id/tv_nome"
        android:layout_below="@+id/tv_nome_amostra"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/area_inventariada"
        android:textColor="#186110"
        android:id="@+id/txt_area_inventariada"
        android:layout_below="@+id/tv_nome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="areaInventariada"
        android:id="@+id/tv_area_inventariada"
        android:layout_alignTop="@+id/txt_area_inventariada"
        android:layout_alignRight="@+id/tv_confianca"
        android:layout_alignEnd="@+id/tv_confianca" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/status"
        android:textColor="#186110"
        android:id="@+id/tv_status"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_confianca"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="status"
        android:id="@+id/tv_status_amostra"
        android:layout_alignTop="@+id/tv_status"
        android:layout_alignRight="@+id/tv_confianca"
        android:layout_alignEnd="@+id/tv_confianca" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/indice_confianca"
        android:id="@+id/txt_indice_confianca"
        android:textColor="#186110"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_area_inventariada"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="confianca"
        android:id="@+id/tv_confianca"
        android:layout_below="@+id/tv_area_inventariada"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
